--- a/src/styles/components/slide.scss
+++ b/src/styles/components/slide.scss
@@ -3,6 +3,7 @@
 .carousel {
   // background-color: red;
   height: toRem(580);
+  border-radius: 20px;
 
   @media all and (min-width: 768px) {
     // width: 100vh;
@@ -13,12 +14,16 @@
   @media all and (min-width: 1024px) {
     height: toRem(580);
     // width: toRem(100);
-    width: 100%;
+    // max-width: 1000px;
+    // width: 100%;
+    // width: 900px;
+    width: toRem(950);
   }
 
   &_item {
     width: 100%;
     height: 100%;
+    border-radius: 20px;
 
     @media all and (min-width: 768px) {
       // background-color: red;
@@ -41,7 +46,7 @@
 .card {
   margin: toRem(10) toRem(40);
   width: toRem(240);
-  // border-radius: 20px;
+  border-radius: 20px;
   background-color: $secondary-color;
 
   @media all and (min-width: 768px) {
@@ -55,13 +60,15 @@
   @media all and (min-width: 1024px) {
     // background-color: red;
     // margin: toRem(20) 15px;
-    width: calc(100% / 3);
+    // width: calc(100% / 3);
+    // width: 300px;
   }
 
   &_imgWrapper {
     height: 50%;
     padding: toRem(20) toRem(5) toRem(10) toRem(5);
     background-color: $secondary-color;
+    border-radius: 20px;
     // display: flex;
     // align-items: center;
     // justify-content: center;
@@ -85,6 +92,7 @@
 
   &_body {
     background-color: $secondary-color;
+    border-radius: 20px;
 
     // &-title {
 
