--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -3,17 +3,20 @@
   padding: toRem(20);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
   gap: 30px;
+  // height: 130vh;
+  // position: relative;
 
   @media all and (min-width: 768px) {
     padding: toRem(40);
     gap: 45px;
+    height: toRem(550);
   }
 
   &_title {
-    margin-top: toRem(10);
+    margin-top: toRem(25);
     font-size: toRem(40);
     color: $secondary-color;
 
@@ -26,8 +29,8 @@
   &_div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    // justify-content: center;
+    // align-items: center;
     gap: 40px;
     text-align: center;
 
@@ -48,6 +51,19 @@
 
     &-text {
       color: $secondary-color;
+      text-align: center;
+
+      @media all and (min-width: 768px) {
+        padding: toRem(0) toRem(40) toRem(0) toRem(40);
+        font-size: toRem(18);
+      }
+
+      @media all and (min-width: 1024px) {
+        max-width: 1000px;
+        font-size: toRem(20);
+        gap: 20px;
+        padding: toRem(0) toRem(100) toRem(0) toRem(100);
+      }
     }
   }
 }
