--- a/src/styles/layout/_contact.scss
+++ b/src/styles/layout/_contact.scss
@@ -8,12 +8,17 @@
   background-color: $secondary-color;
 
   &_title {
-    margin-top: toRem(10);
+    margin-top: toRem(25);
     font-size: toRem(40);
     color: $primary-font-color;
 
     @media all and (min-width: 768px) {
       font-size: toRem(50);
+      margin-top: toRem(30);
+    }
+
+    @media all and (min-width: 1024px) {
+      margin-top: toRem(45);
     }
   }
 
@@ -21,6 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     gap: 10px;
 
     &-text {
@@ -31,6 +37,10 @@
 
       @media all and (min-width: 768px) {
         font-size: toRem(20);
+      }
+
+      @media all and (min-width: 1024px) {
+        font-size: toRem(25);
       }
     }
 
@@ -52,14 +62,20 @@
     align-items: center;
     justify-content: center;
     margin-bottom: toRem(30);
+    text-align: center;
 
     &-text {
       padding-left: toRem(5);
       font-size: toRem(18);
       color: $primary-font-color;
+      margin-bottom: toRem(30);
 
       @media all and (min-width: 768px) {
         font-size: toRem(20);
+      }
+
+      @media all and (min-width: 1024px) {
+        font-size: toRem(25);
       }
     }
   }
@@ -80,6 +96,7 @@
 
   @media all and (min-width: 1024px) {
     width: 180px;
+    // text-align: center;
   }
 
   &-link {
@@ -90,6 +107,11 @@
 
     @media all and (min-width: 768px) {
       font-size: toRem(20);
+    }
+
+    @media all and (min-width: 1024px) {
+      font-size: toRem(25);
+      padding: toRem(15);
     }
   }
 }
@@ -120,6 +142,10 @@
       text-align: start;
       margin-top: toRem(20);
       color: $primary-font-color;
+
+      @media all and (min-width: 1024px) {
+        font-size: toRem(25);
+      }
     }
 
     &-input {
@@ -127,19 +153,45 @@
       border-color: $primary-font-color;
       border-radius: 10px;
       padding: toRem(5);
+
       @media all and (min-width: 768px) {
         padding: toRem(10);
+      }
+
+      @media all and (min-width: 1024px) {
+        font-size: toRem(20);
       }
     }
 
     &-btn {
-      margin: toRem(20);
+      margin-top: toRem(20);
+      padding-bottom: toRem(5);
       height: 40px;
       width: 80px;
       color: $primary-font-color;
       background-color: $statement-color;
       border-color: $primary-font-color;
       border-radius: 15px;
+      font-size: toRem(20);
+
+      @media all and (min-width: 768px) {
+        width: 100px;
+      }
+
+      @media all and (min-width: 1024px) {
+        height: 60px;
+        font-size: toRem(25);
+      }
     }
+  }
+}
+
+.statusText {
+  @media all and (min-width: 768px) {
+    font-size: toRem(25);
+  }
+
+  @media all and (min-width: 1024px) {
+    font-size: toRem(30);
   }
 }
