--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -40,6 +40,17 @@
   }
 }
 
+.navElements_list-link:hover {
+  color: $primary-color;
+  // text-decoration: underline;
+}
+
+// .header_button:hover {
+//   background-color: #000;
+//   /*  Making button bigger on hover  */
+//   padding: 20px 60px;
+// }
+
 @media all and (min-width: 768px) {
   .header {
     width: 100%;
@@ -58,6 +69,7 @@
       font-size: toRem(30);
       color: $statement-color;
       margin-left: toRem(10);
+      text-shadow: 0px 0px 2px $primary-font-color;
 
       @media all and (min-width: 1024px) {
         font-size: toRem(40);
