--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,19 +1,41 @@
 .footer {
   background-color: $primary-color;
-  padding: toRem(30) toRem(20);
+  padding: toRem(40) toRem(30) toRem(30);
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 5vh;
 
-  &_text {
+  @media all and (min-width: 768px) {
     font-size: toRem(14);
+    padding: toRem(40) toRem(50) toRem(30);
+  }
+
+  &_text {
+    font-size: toRem(12);
     font-style: italic;
     color: $primary-font-color;
+
+    @media all and (min-width: 768px) {
+      font-size: toRem(14);
+    }
+
+    @media all and (min-width: 1024px) {
+      font-size: toRem(20);
+    }
   }
 
   &_list {
     display: flex;
     gap: 10px;
+    font-size: toRem(20);
+
+    @media all and (min-width: 768px) {
+      font-size: toRem(25);
+    }
+
+    @media all and (min-width: 1024px) {
+      font-size: toRem(30);
+    }
   }
 }
