--- a/src/styles/components/slide.scss
+++ b/src/styles/components/slide.scss
@@ -17,7 +17,7 @@
     // max-width: 1000px;
     // width: 100%;
     // width: 900px;
-    width: toRem(1100);
+    width: toRem(970);
   }
 
   &_item {
@@ -38,7 +38,7 @@
       overflow: hidden;
       height: 100%;
       overflow: hidden;
-      width: 100%;
+      // width: 100%;
     }
   }
 }
@@ -141,12 +141,10 @@
 
 .button {
   background-color: $statement-color;
-  border-color: $statement-color;
+  // border-color: $statement-color;
   height: 45px;
-  color: $primary-font-color;
   background-color: $color-lilac;
   border-color: $icons-color;
-  font-size: toRem(18);
   border-radius: 10px;
 
   @media all and (min-width: 1024px) {
@@ -157,6 +155,13 @@
     align-items: center;
     justify-content: center;
   }
+}
+
+.btn-link {
+  text-decoration: none;
+  color: $primary-font-color;
+  font-size: toRem(18);
+  font-weight: 500;
 }
 
 // @media all (min-width: 0px) and (max-width: 768px) {}
@@ -241,7 +246,6 @@
   box-shadow: 0 0 10px $primary-font-color;
   transform: scale(1.02);
   background-color: $statement-color;
-  color: $primary-font-color;
   border-color: $primary-font-color;
 }
 
@@ -249,5 +253,12 @@
   // box-shadow: 0 0 20px;
   transform: scale(1.02);
   background-color: $primary-color;
+}
+
+.btn-link:hover {
+  color: $primary-font-color;
+}
+
+.btn-link:active {
   color: $secondary-color;
 }
