--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -12,7 +12,11 @@
   @media all and (min-width: 768px) {
     padding: toRem(40);
     gap: 45px;
-    height: toRem(550);
+    height: toRem(700);
+  }
+
+  @media all and (min-width: 1024px) {
+    height: toRem(750);
   }
 
   &_title {
@@ -37,23 +41,24 @@
     flex-direction: column;
     // justify-content: center;
     // align-items: center;
-    gap: 40px;
+    gap: 20px;
     text-align: center;
+    margin-bottom: toRem(30);
 
     @media all and (min-width: 768px) {
-      flex-direction: row;
-      gap: 40px;
+      // flex-direction: row;
+      gap: 20px;
       text-align: start;
     }
 
-    &-div {
-      @media all and (min-width: 768px) {
-        width: 40%;
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-      }
-    }
+    // &-div {
+    //   @media all and (min-width: 768px) {
+    //     width: 40%;
+    //     display: flex;
+    //     flex-direction: column;
+    //     gap: 30px;
+    //   }
+    // }
 
     &-text {
       color: $secondary-color;
@@ -62,11 +67,12 @@
       @media all and (min-width: 768px) {
         padding: toRem(0) toRem(40) toRem(0) toRem(40);
         font-size: toRem(18);
+        // margin-bottom: toRem(45);
       }
 
       @media all and (min-width: 1024px) {
         max-width: 1000px;
-        font-size: toRem(20);
+        font-size: toRem(23);
         gap: 20px;
         padding: toRem(0) toRem(100) toRem(0) toRem(100);
       }
@@ -100,3 +106,8 @@
 }
 
 //que los div de texto estén dentro de otro div con un color de fondo que haga contraste
+
+.span-text {
+  color: $statement-color;
+  font-weight: 500;
+}
