--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -9,7 +9,8 @@
       height: 40px;
       width: 40px;
       border-radius: 15px;
-      border-color: $primary-font-color;
+      border: solid 2px $icons-color;
+      // border-color: $primary-font-color;
 
       &-icon {
         padding-top: toRem(5);
@@ -26,15 +27,16 @@
       padding-left: toRem(1);
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 15px;
 
       &-link {
         text-decoration-line: none;
         padding: 10px;
-        color: black;
-        background-color: #dbbfdeaf;
+        color: $primary-font-color;
+        background-color: #dbbfde;
         padding: toRem(5) toRem(10);
         border-radius: 10px;
+        border: solid 2px $icons-color;
       }
     }
   }
