--- a/src/styles/layout/_landing.scss
+++ b/src/styles/layout/_landing.scss
@@ -91,6 +91,12 @@
       text-align: center;
       border-radius: 15px;
 
+      @media all and (min-width: 768px) {
+        height: 60px;
+        width: 180px;
+        padding-top: toRem(10);
+      }
+
       @media all and (min-width: 1024px) {
         height: 100px;
         width: 180px;
