last changes for now (maybe)

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -30,9 +30,9 @@
 //   color: $statement-color;
 // }
 
-.fa-brands {
-  color: $primary-font-color;
-}
+// .fa-brands {
+//   color: $primary-font-color;
+// }
 
 // :root{
 //     overflow-x: hidden;
