--- a/src/styles/layout/_landing.scss
+++ b/src/styles/layout/_landing.scss
@@ -136,8 +136,8 @@
       padding: toRem(30) toRem(10.5);
     }
     .cv {
-      padding: toRem(0);
-      line-height: 1.2;
+      padding: toRem(33) toRem(50);
+      // line-height: 1.2;
       // padding: toRem(20) toRem(15) toRem(20) toRem(5);
     }
   }
